# jjgi

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile  mise.toml  rust-toolchain.toml  yamlfmt.yml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: checks.yml  release.yml
src/: main.rs
tests/: cli.rs
tests/scripts/: basic.sh  err.sh  no_stdout.sh
